--- a/shop.html
+++ b/shop.html
@@ -63,8 +63,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Merch</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">WRAPPED in 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
@@ -105,7 +105,7 @@
 
 
 <!-- Place your own code below -->
-<iframe src="https://standardstoryco.printify.me/products" width="full" height="1080" seamless="seamless" scrolling="yes" frameborder="0" allowfullscreen="true"></iframe>
+<iframe src="https://standardstoryco.printify.me/products" width="full" height="1080" seamless="seamless" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
 <!-- Place your own code above -->
 
 </section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
