--- a/work.html
+++ b/work.html
@@ -67,8 +67,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Merch</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">WRAPPED in 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
@@ -116,9 +116,9 @@
                     Drama (2019)<br></p>
             </div>
             <div class="col-12 col-md-6 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/1VdFCiDpSdU?rel=0&amp;amp;&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/rQGjEUJqiNY?rel=0&amp;amp;&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">
-                    Comedy (2022)</p>
+                    Drama? (2023)</p>
             </div>
         </div>
     </div>
