--- a/newsletter.html
+++ b/newsletter.html
@@ -125,6 +125,18 @@
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section--no-padding cid-u0UhNeK4tH" id="witsec-html-block-2c">
+
+
+
+
+
+<!-- Place your own code below -->
+<iframe src="https://newsletter-archive.standardstoryco.com" width="full" height="1080" seamless="seamless" scrolling="yes" frameborder="0" allowfullscreen="true"></iframe>
+<!-- Place your own code above -->
+
 </section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
