create github pages

--- a/newsletter.html
+++ b/newsletter.html
@@ -41,7 +41,21 @@
 
 
   
-  <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
+  <section class="mbr-section mbr-section--no-padding cid-tL9Bmhz2ww" id="witsec-html-block-1s">
+
+
+
+
+
+<!-- Place your own code below -->
+<div class="container">
+	
+</div>
+<!-- Place your own code above -->
+
+</section>
+
+<section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -84,28 +98,15 @@
     </nav>
 </section>
 
-<section class="mbr-section mbr-section--no-padding cid-tL9Bmhz2ww" id="witsec-html-block-1s">
+<section class="mbr-section mbr-section--no-padding cid-u1i1VJGrA4" id="witsec-html-block-2d">
 
 
 
 
 
 <!-- Place your own code below -->
-<div class="container">
-	
-</div>
-<!-- Place your own code above -->
+<iframe src="https://subscribepage.io/sscnewsletter" width="100%" height="1700" seamless="seamless" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
 
-</section>
-
-<section class="mbr-section mbr-section--no-padding cid-u0Qu5SGvZl" id="witsec-html-block-2b">
-
-
-
-
-
-<!-- Place your own code below -->
-<iframe src="https://subscribepage.io/sscnewsletter" width="100%" height="1750px" seamless="seamless" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
 <!-- Place your own code above -->
 
 </section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
