create github pages

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1kXnIXTx+OS3VRDoBw/rF7kZ+XznF8i4m5VpO0c87GpsXYezPmBpaXTacbImxHRpITV4cSHGPhbD8SSjIybXi0Kx2yUpUXKwHUtayP/L9ko0wHP3aw/HDf+bMwi+E/nr">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pxQ3axzL5jAl7/sFreFkbxaA4/6vxsSBnKTvGgfzlkbJq2Gl01BXyaGtz+THXfnid3gXvQNZgUJkPG07MmEhVHer+bUHDR8xqIaVi7ogP8wfrGbAS2Qd/SJ8PJZfEXXx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Message sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -123,7 +123,7 @@
     </div>
 </section>
 
-<section class="witsec-mailform mbr-section cid-u1yoW7QX2n" id="witsec-mailform-builder-2e" data-rv-view="69">
+<section class="witsec-mailform mbr-section cid-u1yoW7QX2n" id="witsec-mailform-builder-2e" data-rv-view="164">
 
   
 
@@ -132,9 +132,8 @@
     <div class="row justify-content-center">
       <div class="title col-12 col-lg-8">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-          CONTACT FORM BUILDER</h2>
-        <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-          Easily build contact forms inside Mobirise<br></h3>
+          Testing email form</h2>
+        <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">test1</h3>
       </div>
     </div>
   </div>
