create github pages

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wkFYTj90NNAy8CrfAdhp9NnEC+cvTJvVf/ZCnWkYp86/MyFg7Rv28bLXHgjnL9/X1W5aamKa4wnRzStiqNOXRfSBT+USkFrfl/RSk/5rNeev1O4eHaPZmCw75U1biHhL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bV2uTnARouRqrr42y8xOijer1rkFQm1LWvAtekMfxLJz44cPpr+PXHXJ3wGfgF2Bg1stvjydkMQV9n+0jWTQqMFxkF5erk9ZDePKl9GVLqIY8yj2qFeoJf39eZ5vNJPC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Message sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -123,7 +123,7 @@
     </div>
 </section>
 
-<section class="witsec-mailform mbr-section cid-u1yoW7QX2n" id="witsec-mailform-builder-2e" data-rv-view="251">
+<section class="witsec-mailform mbr-section cid-u1yoW7QX2n" id="witsec-mailform-builder-2e" data-rv-view="338">
 
   
 
@@ -153,7 +153,7 @@
               <div class="row">
                 <div class="col-md-12 form-group ws-form-alerts">
                   <div hidden="hidden" class="alert alert-success col-12 mbr-alert-success mbr-fonts-style display-7">Message sent!</div>
-                  <div hidden="hidden" class="alert alert-danger col-12 mbr-alert-danger mbr-fonts-style display-7">An error occured. Please try again. {errormsg}</div>
+                  <div hidden="hidden" class="alert alert-danger col-12 mbr-alert-danger mbr-fonts-style display-7">An error occured. Please try again. {errorcode}</div>
                 </div>
               </div>
 
