create github pages

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NmJL9QAmvxw1NW8JWfiSDgyAk5lx7yTMkEQYvTz/9bAfBluPuDmywW/OFdJy5RB+2gErQD84PzQneHetpfVZ8pLTeWkEXR3eYuVj/4hIgKkc0e8CFXDdS+P927qpRko8">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UZqTNIeM5hBIq/ix+iZmOWrhtezQUUtp53On9p6OgLuxwl+nrVdXqNBi9ihGdaiHhrFJAaLX1bU7WdjbM0XRgQFNalJM0NnkwTHKE1dw/63dAK9YSAyed9QafJT5r/xt">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Message sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -133,9 +133,9 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Email Kent (testing)</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Email Kent (testing2)</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7">Business proposals, questions that Google or my channel can't answer, or a friendly howdy are welcome.<br><br>Please do not send unsolicited materials (scripts, films, etc).<br>If you have a project, feel free to email me about it, but don't send me the actual thing.<br>If I'm interested and have the time to spare, I'll reply for more info.<br><br>Disclaimer: I get a lot of email and don't always have time to respond. Thanks for understanding.</p>
-                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
+                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mbjnlpaz" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">Full Name</label>
     <input type="text" name="name" id="full-name" placeholder="first and last" required="">
