create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -70,7 +70,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="https://standardstoryco.teachable.com/p/wrapped-in-30-days" target="_blank">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
@@ -315,7 +315,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T7U67g7PaZJDE7POTPz/s2Uaf56Ky+VgUUjUf+nuHeFG/N3TSAmjp6Vb5gM6UHoy+N2TBza7yrJzTbIUMb6YY14yk0uA86Qm2XyYnTaS0CVXdPxm9SWKHcjLEq54w7l1">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2uITOmzuHV8QlEwRz6r8h9lxMFBFJA8yoXg/Hg0o1acBNw92jbOJP8Lnl3rGtw5LDE0jVveNp2DA4esrlnRXhrgdDXApOQcgxRRkmD/R/unIQ80XR1pxHeDVyd7HiO9F">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
