--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="https://standardstoryco.teachable.com/p/wrapped-in-30-days" target="_blank">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
