--- a/newsletter.html
+++ b/newsletter.html
@@ -41,7 +41,21 @@
 
 
   
-  <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
+  <section class="mbr-section mbr-section--no-padding cid-tL9Bmhz2ww" id="witsec-html-block-1s">
+
+
+
+
+
+<!-- Place your own code below -->
+<div class="container">
+	
+</div>
+<!-- Place your own code above -->
+
+</section>
+
+<section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -63,7 +77,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="https://standardstoryco.teachable.com/p/wrapped-in-30-days" target="_blank">Course</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="shop.html">Shirts</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">1-on-1's</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
@@ -82,20 +96,6 @@
             </div>
         </div>
     </nav>
-</section>
-
-<section class="mbr-section mbr-section--no-padding cid-tL9Bmhz2ww" id="witsec-html-block-1s">
-
-
-
-
-
-<!-- Place your own code below -->
-<div class="container">
-	
-</div>
-<!-- Place your own code above -->
-
 </section>
 
 <section class="mbr-section mbr-section--no-padding cid-u1i1VJGrA4" id="witsec-html-block-2d">
