create github pages

--- a/ffn-booking.html
+++ b/ffn-booking.html
@@ -110,7 +110,7 @@
 <!-- Place your own code below -->
 <!-- Calendly inline widget begin -->
 <br><br><br>
-<div class="calendly-inline-widget" data-url="https://calendly.com/standardstoryco/sponsor-friday-film-notes" style="min-width:320px;height:700px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/standardstoryco/sponsor-friday-film-notes" style="min-width:100%;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
 <!-- Place your own code above -->
